--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -19,9 +19,8 @@
         <main>
             <!--社会カテゴリ-->
             <article>
+                <h2>社会</h2>
                 <section>
-                    <h2>社会</h2>
-
                     <h3>和菓子店も「トリックオアトリート！」</h3>
                     <p>日本でも年々人気の高まるハロウィン。<br>今年は大手和菓子店5社がハロウィン向けの和菓子セットを共同開発しました。</p>
                     <audio src="ichi.mp3" controls></audio>
@@ -35,10 +34,10 @@
 
                     <label>年代</label>
                     <select>
-                        <option value="10代以下"></option>
-                        <option value="20代"></option>
-                        <option value="30代以下"></option>
-                        <option value="40代以上"></option>
+                        <option>10代以下</option>
+                        <option>20代</option>
+                        <option>30代</option>
+                        <option>40代以上</option>
                     </select>
                     <br>
 
